--- a/src/app/components/viz-container/viz-container.component.html
+++ b/src/app/components/viz-container/viz-container.component.html
@@ -1,1 +1,5 @@
-<p>viz-container works!</p>
+<div class="viz-container">
+    <div style="height: 1000px;" [style.background]="background">
+
+    </div>
+</div>
