--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-main-color-selection></app-main-color-selection>
+<!-- <br>
+<app-viz-container></app-viz-container> -->
 <br>
-<app-test-component></app-test-component>
+<app-bar-chart [colors]="default_palette" class="viz-container"></app-bar-chart>
+<app-line-chart [colors]="default_palette" class="viz-container"></app-line-chart>
+<app-treemap [colors]="default_palette" class="viz-container"></app-treemap>
+<app-scatter-plot [colors]="default_palette" class="viz-container"></app-scatter-plot>
+<!-- <app-svg-test [colors]="default_palette" class="viz-container"></app-svg-test> -->
+<!-- <app-test-component></app-test-component> -->
