--- a/src/app/components/graphs/treemap/treemap.component.scss
+++ b/src/app/components/graphs/treemap/treemap.component.scss
@@ -1,11 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-.viz-container{
-    display: inline-block;
-    width: 20%;
-    margin: 10px;
-}
-
 .viz{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px !important;
 }
@@ -18,6 +10,6 @@
     padding: 2% 3%;
 }
 
-#line{
-    margin: 0% 0% 5% 5%;
+#treemap{
+    margin: 0% 2% 5% 3%;
 }
