--- a/src/app/components/test-component/test-component.component.html
+++ b/src/app/components/test-component/test-component.component.html
@@ -1,10 +1,13 @@
-<p>test-component works!</p>
+<h3> Test Component starts here! </h3>
+
 <div style="padding: 10px; width: 500px;" [style.background]="background">
 <div [style.background]="colors[0]"> COLOR 0 </div>
 <div [style.background]="colors[1]"> COLOR 1 </div>
 <div [style.background]="colors[2]"> COLOR 2 </div>
 <div [style.background]="colors[3]"> COLOR 3 </div>
 <div [style.background]="colors[4]"> COLOR 4 </div>
+
+<div *ngFor="let index of colors"> STUFF </div>
 
 </div>
 
