--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 .viz-container{
-    display: inline-block;
-    width: 20%;
-    margin: 10px;
+    display: contents;
 }
 
 .viz{
