pie, stacked-area charts added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <app-scatter-plot [colors]="default_palette" class="viz-container"></app-scatter-plot>
     <app-pie-chart [colors]="default_palette" class="viz-container"></app-pie-chart>
     <app-choropleth-map [colors]="default_palette" class="viz-container"></app-choropleth-map>
+    <!-- <app-stacked-area-chart [colors]="default_palette" class="viz-container"></app-stacked-area-chart> -->
 </main>
 <!-- <app-svg-test [colors]="default_palette" class="viz-container"></app-svg-test> -->
 <!-- <app-test-component></app-test-component> -->
