--- a/src/app/components/main-color-selection/main-color-selection.component.scss
+++ b/src/app/components/main-color-selection/main-color-selection.component.scss
@@ -1,17 +1,35 @@
 .color-palette{
+    position: fixed;
+    background: cadetblue;
+    width: 100%;
+    padding: 5px 5px 10px 10px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
+    input[type = "number"]{
+        margin-top: 2px;
+        border: 1px solid #eeeeee;
+        outline: none;
+    }
+
+    .num-colors-selection{
+        display: inline-block;
+        vertical-align: top;
+        width: 12%;
+        margin-right: 5px;
+    }
 
     .color-selection{
         display: inline-block;
         margin-right: 4px;
 
         .color-selection-picker{
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             margin-bottom: 2px;
         }
     
         .color-selection-text{
-            width: 60px;
+            width: 80px;
         }
     }
 
@@ -20,13 +38,24 @@
         margin-left: 15px;
 
         .background-selection-picker{
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             margin-bottom: 2px;
         }
     
         .background-selection-text{
-            width: 60px;
+            width: 80px;
         }
+    }
+
+
+    .background-selection-label, .color-selection-label, .selection-label{
+        font-family: Helvetica;
+        color: #efefef;
+        font-size: 1em;
+    }
+
+    .color-selection-picker, .background-selection-picker{
+        border: 1px solid #eeeeee;
     }
 }
