--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,6 @@ main{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1em;
+
+    margin-top: 9%;
 }
