--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
+body{
+    margin: 0px;
+}
+
+app-main-color-selection{
+    display: contents;
+}
+
 .viz-container{
     display: contents;
 }
