--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,6 @@
 main{
+    padding: 10px;
+
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 1em;
