--- a/src/app/components/main-color-selection/main-color-selection.component.scss
+++ b/src/app/components/main-color-selection/main-color-selection.component.scss
@@ -5,11 +5,12 @@
     padding: 5px 5px 10px 10px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 
+    overflow-x: auto;
+
     .selection{
         display: flex;
         gap: 0.2em;
         align-items: flex-start;
-        
         width: 60%;
         min-width: 500px;
     }
