stacked area chart, initial shades chart added

--- a/src/app/components/graphs/stacked-area-chart/stacked-area-chart.component.html
+++ b/src/app/components/graphs/stacked-area-chart/stacked-area-chart.component.html
@@ -1,4 +1,4 @@
 <div class="viz" [style.background]="background">
-    <div class="viz-header"> Line chart </div>
+    <div class="viz-header"> Stacked Area Chart </div>
     <figure  id="stacked-area"></figure>
 </div>
