--- a/src/app/components/main-color-selection/main-color-selection.component.scss
+++ b/src/app/components/main-color-selection/main-color-selection.component.scss
@@ -46,7 +46,7 @@
     .background-selection{
         flex: 1;
         max-width: 100px;
-        margin-left: 15px;
+        margin: 0 15px;
 
         .background-selection-picker{
             height: 10vh;
