added typography component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <app-choropleth-map [colors]="default_palette" class="viz-container"></app-choropleth-map>
     <app-stacked-area-chart [colors]="default_palette" class="viz-container"></app-stacked-area-chart>
     <app-tints-shades [colors]="default_palette" class="viz-container"></app-tints-shades>
+    <app-typography [colors]="default_palette" class="viz-container"></app-typography>
 </main>
 <!-- <app-svg-test [colors]="default_palette" class="viz-container"></app-svg-test> -->
 <!-- <app-test-component></app-test-component> -->
