--- a/src/app/components/main-color-selection/main-color-selection.component.scss
+++ b/src/app/components/main-color-selection/main-color-selection.component.scss
@@ -11,8 +11,15 @@
         display: flex;
         gap: 0.2em;
         align-items: flex-start;
-        width: 60%;
         min-width: 500px;
+
+        padding-bottom: 10px;
+        margin-bottom: 5px;
+        border-bottom: 1px solid #efefef;
+
+        .import-btn{
+            margin-top: 5px;
+        }
     }
 
     input[type = "number"]{
@@ -58,7 +65,6 @@
             max-width: 92%;
         }
     }
-
 
     .background-selection-label, .color-selection-label, .selection-label{
         font-family: Helvetica;
