socials, code cleanup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-main-color-selection></app-main-color-selection>
-<!-- <br>
-<app-viz-container></app-viz-container> -->
 <br>
 <main>
     <app-bar-chart [colors]="default_palette" class="viz-container"></app-bar-chart>
@@ -13,5 +11,13 @@
     <app-tints-shades [colors]="default_palette" class="viz-container"></app-tints-shades>
     <app-typography [colors]="default_palette" class="viz-container"></app-typography>
 </main>
-<!-- <app-svg-test [colors]="default_palette" class="viz-container"></app-svg-test> -->
-<!-- <app-test-component></app-test-component> -->
+
+<footer>
+    
+    <div class="col item social">
+        <span><strong>Dataviz Palettes</strong> by Schubert de Abreu</span>
+        <!-- <a href="#"><i class="fa fa-envelope"></i></a> -->
+        <a href="https://twitter.com/schubertda1" target="_blank"><i class="fa fa-twitter" target="_blank"></i></a>
+        <a href="https://www.linkedin.com/in/schubert-de-abreu-47a56037/" target="_blank"><i class="fa fa-linkedin"></i></a>
+    </div>
+</footer>
