--- a/src/app/components/main-color-selection/main-color-selection.component.html
+++ b/src/app/components/main-color-selection/main-color-selection.component.html
@@ -1,7 +1,7 @@
 <div class="color-palette">
     <div class="selection">
         <div class="num-colors-selection">
-            <label for="num_colors" class="selection-label"> Number of colors</label> <br>
+            <label for="num_colors" class="selection-label mb-0"> Number of colors</label> <br>
             <input type="number" [(value)]="num_colors" (change)="numColorsChange($event)" name="num_colors" />
             <input type="button" class="import-btn btn btn-light" value="Import colors" (click)="isCollapsed = !isCollapsed">
         </div>
