--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
+<section id="intro">
+    <p><span class="title-text">DataViz Palettes</span> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mattis consectetur ligula id tempus. Nulla sollicitudin ullamcorper est, sed laoreet orci suscipit pellentesque. Cras consectetur ex non orci placerat euismod. Suspendisse et quam eget nunc mattis elementum id ut libero. Donec egestas tellus sed lorem sollicitudin egestas.</p> 
+    <p>Nullam tristique dignissim elit non facilisis. Vivamus erat nunc, consequat sit amet sapien vel, laoreet cursus risus. Sed auctor eros volutpat, cursus nisl vel, condimentum diam. In scelerisque turpis libero, ac sollicitudin augue convallis ut. Proin ac erat ac magna aliquet ornare id et sem. Etiam efficitur rutrum quam, ut ullamcorper diam iaculis id. Suspendisse eget fermentum diam, at elementum ipsum.</p> 
+</section>
+
 <app-main-color-selection></app-main-color-selection>
 <br>
-<main>
+<main id="main">
     <app-bar-chart [colors]="default_palette" class="viz-container"></app-bar-chart>
     <app-line-chart [colors]="default_palette" class="viz-container"></app-line-chart>
     <app-treemap [colors]="default_palette" class="viz-container"></app-treemap>
