--- a/src/app/components/main-color-selection/main-color-selection.component.html
+++ b/src/app/components/main-color-selection/main-color-selection.component.html
@@ -1,4 +1,4 @@
-<div class="color-palette">
+<div class="color-palette animated fadeInDown" id="main-selection">
     <div class="selection">
         <div class="num-colors-selection">
             <label for="num_colors" class="selection-label mb-0"> Number of colors</label> <br>
