--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <section id="intro">
-    <p><span class="title-text">DataViz Palettes</span> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mattis consectetur ligula id tempus. Nulla sollicitudin ullamcorper est, sed laoreet orci suscipit pellentesque. Cras consectetur ex non orci placerat euismod. Suspendisse et quam eget nunc mattis elementum id ut libero. Donec egestas tellus sed lorem sollicitudin egestas.</p> 
-    <p>Nullam tristique dignissim elit non facilisis. Vivamus erat nunc, consequat sit amet sapien vel, laoreet cursus risus. Sed auctor eros volutpat, cursus nisl vel, condimentum diam. In scelerisque turpis libero, ac sollicitudin augue convallis ut. Proin ac erat ac magna aliquet ornare id et sem. Etiam efficitur rutrum quam, ut ullamcorper diam iaculis id. Suspendisse eget fermentum diam, at elementum ipsum.</p> 
+    <span class="title-text">DataViz Palettes</span> <br> 
+    <p class="intro-para">
+        Ever fallen into the trap of picking out a color palette for your data visualization work only to realise later that your choice colours doesn't quite hit the mark on your graph.
+        This tool lets get a sense of what your palette would look like on a variety of charts, while also allowing you quickly make changes and see how they play out.
+    </p> 
+    <p class="intro-para">
+        You can also quickly import colors from your favourite color palette generators and experiment with what they would look like in your viz. 
+    </p> 
 </section>
 
 <app-main-color-selection></app-main-color-selection>
